fixed register route toggling closed the collapse on navbar && added base for react-transition-group animations

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.page {
+  position: absolute;
+  top: 88px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
