--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -214,9 +214,9 @@ h1 {
 
 /* Page Animation transitions */
 
-.slide-appear {
+/* .slide-appear {
   transform: translate3d(100%, 0, 0);
-}
+} */
 
 /* Media Queries */
 
